[tool.poetry]
name = "magni"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-contrib-python-headless = "^4.6.0.66"
jinja2 = "^3.1.2"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
