[tool.poetry]
name = "magni"
version = "0.1.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-contrib-python-headless = "^4.6.0.66"
jinja2 = "^3.1.2"
pillow = "^9.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"
pysocks = "^1.7.1"
playwright = "^1.28.0"


[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.11.6.1"
types-requests = "^2.28.11.5"
mypy = "^0.991"
pylint = "^2.15.6"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
